# tf_keyboard_cal

./: CHANGELOG.rst  CMakeLists.txt  README.md  README.old  bug_notes.md  frames.gv  package.xml  plugin_description.xml
config/: example_imarker_menu.tf  tf_keyboard.yaml  tf_keyboard_camera_pose.yaml  tf_keyboard_perception_offset.yaml  tf_keyboard_sensor_offset.yaml  tf_keyboard_shelf_offset.yaml  tf_keyboard_testing_offset.yaml  tf_keyboard_world_to_shelf.yaml  tf_keyboard_world_to_thing.yaml  tf_keyboard_wrist_offset.yaml  tf_keyboard_wrist_offset.yaml.backup  tf_kinect_left.yaml  tf_kinect_right.yaml  tf_xtion_left.yaml  tf_xtion_right.yaml
include/tf_keyboard_cal/: imarker_simple.h  imarker_wrapper.h  manual_tf_alignment.h  rviz_tf_publisher.h  tf_keyboard_cal_gui.h  tf_remote_receiver.h
launch/: rviz_demo.launch  rviz_demo.rviz  tf_im_world_to_thing.launch  tf_keyboard.launch  tf_keyboard_camera_pose.launch  tf_keyboard_perception_offset.launch  tf_keyboard_sensor_offset.launch  tf_keyboard_shelf_offset.launch  tf_keyboard_world_to_shelf.launch  tf_keyboard_world_to_thing.launch  tf_keyboard_wrist_offset.launch
scripts/: tf_interactive_marker.py
src/: demo_tf_listener.cpp  imarker_simple.cpp  imarker_wrapper.cpp  manual_tf_alignment.cpp  rviz_tf_publisher.cpp  tf_keyboard.cpp  tf_keyboard_cal_gui.cpp  tf_keyboard_cal_gui.h  tf_remote_receiver.cpp
