<?xml version="1.0"?>
<package format="2">
  <name>tf_keyboard_cal</name>
  <version>0.1.0</version>
  <description>Allows manual control of a TF through the keyboard</description>

  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>
  <maintainer email="mcevoy.andy@gmail.com">Andy McEvoy</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/tf_keyboard_cal</url>
  <url type="butracker">https://github.com/davetcoleman/tf_keyboard_cal/issues</url>
  <url type="repository">https://github.com/davetcoleman/tf_keyboard_cal/</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>
  <author email="mcevoy.andy@gmail.com">Andy McEvoy</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>keyboard</depend>
  <depend>rviz_visual_tools</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>roslib</depend>
  <depend>rosparam_shortcuts</depend>
  <depend>cmake_modules</depend>
  <depend>roslint</depend>
  <depend>tf_conversions</depend>
  <depend>interactive_markers</depend>

  <export>
  </export>
</package>
